Remove mike version pinning
Signed-off-by: Roberto Di Cosmo <roberto@dicosmo.org>

--- a/.github/workflows/publish-dev.yml
+++ b/.github/workflows/publish-dev.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Install pre-requisites
       run: pip install -r requirements.txt
     - name: Install mike
-      run: pip install mike==1.2.0
+      run: pip install mike
     - name: Build
       run: mkdocs build -v --clean
     - name: Configure Git user
