--- a/.github/workflows/publish-releases.yml
+++ b/.github/workflows/publish-releases.yml
@@ -22,8 +22,8 @@ jobs:
       run: mkdocs build -v --clean
     - name: Configure Git user
       run: |
-         git config --local user.email "github-actions[bot]@users.noreply.github.com"
-         git config --local user.name "github-actions[bot]"
+         git config user.email "github-actions[bot]@users.noreply.github.com"
+         git config user.name "github-actions[bot]"
     - name: Deploy MkDoc with mike 🚀
       run: |
          mike deploy --push ${{ steps.extract_branch.outputs.branch }}
