--- a/.github/workflows/publish-dev.yml
+++ b/.github/workflows/publish-dev.yml
@@ -19,8 +19,8 @@ jobs:
       run: mkdocs build -v --clean
     - name: Configure Git user
       run: |
-         git config user.email "github-actions[bot]@users.noreply.github.com"
-         git config user.name "github-actions[bot]"
+         git config --global user.email "github-actions[bot]@users.noreply.github.com"
+         git config --global user.name "github-actions[bot]"
     - name: Deploy MkDoc with mike 🚀
       run: |
          mike deploy --push dev
