--- a/.github/workflows/publish-releases.yml
+++ b/.github/workflows/publish-releases.yml
@@ -24,6 +24,7 @@ jobs:
       run: |
          git config --global user.email "github-actions[bot]@users.noreply.github.com"
          git config --global user.name "github-actions[bot]"
+	 git config --global --add safe.directory '*'
     - name: Deploy MkDoc with mike 🚀
       run: |
          mike deploy --push ${{ steps.extract_branch.outputs.branch }}
