--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,8 +13,8 @@ nav:
 - 'Clause 2: Normative references': 2.Normative_references.md
 - 'Clause 3: Terms and definitions': 3.Terms_and_definitions.md
 - 'Clause 4: Syntax': 4.Syntax.md
-- 'Clause 5: Core Identifiers': 5_Core_identifiers.md
-- 'Clause 6: Qualified Identifiers': 6_Qualified_identifiers.md
+- 'Clause 5: Core Identifiers': 5.Core_identifiers.md
+- 'Clause 6: Qualified Identifiers': 6.Qualified_identifiers.md
 - 'Annex A: Conformance': A.Conformance.md
 - 'Annex B: Bibliography': B.Bibliography.md
 copyright: Copyright &copy; 2022 - SWHID Contributors.
