--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,6 @@
 site_name: specification v1.1
+repo_url: https://github.com/swhid/specification
+edit_uri: blob/master/Chapters/
 docs_dir: Chapters
 theme: readthedocs
 extra_css:
