feat: add swhid-design submodule and update CSS references
- Add swhid-design as a git submodule in design/ directory
- Update mkdocs.yml to reference local submodule files instead of external paths
- This ensures the design system files are available in fresh clones
- Fixes build issues when cloning the repository without the parent directory structure

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,19 @@
-site_name: specification v1.2
+site_name: SWHID Specification
+site_url: https://swhid.org/specification/
 repo_url: https://github.com/swhid/specification
 edit_uri: blob/main/Chapters/
 docs_dir: Chapters
-theme: readthedocs
+
+theme:
+  name: readthedocs
+  custom_dir: docs/overrides
+
 extra_css:
-- css/style.css
+  - css/style.css
+  - css/swh-mkdocs-theme.css
+  - design/css/tokens.css
+  - design/css/swhid-brand.css
+  - design/css/unified-navbar.css
 use_directory_urls: true
 nav:
 
